--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -47,7 +47,7 @@ list(
   rename(nobs_site_tr_func, 'tree_traits' = 'n')
 ) %>%
   reduce(left_join, by = "site") %>%
-  kable(caption = 'Number of replicates per site')
+  kable(caption = 'Number of replicates per site', longtable = FALSE)
 ```
 
 
@@ -55,11 +55,11 @@ list(
 
 Data analyses were conducted at 'plot-level', whereby plots, rather than individual trees, were treated as replicates.^[Increasingly, I felt that 'tree-level' analyses should be excluded altogether, with analyses focussing solely on 'plot-level' calculations, given that, for tree-level data, (1) some distance-based FD indices cannot be calculated and (2) MDS fails to converge (see below); also, (3) there was some concern over the non-independence of data when considering individual trees within the same plot as replicates, and (4) in practical terms, environmental assessments would be conducted at the scale of plots rather than individual trees. But perhaps tree-level results could still be included as Supplementary Material.] Thus, lichen taxonomic and functional group abundance data were summed for each plot;^[It might be worth checking whether exclusion of rare taxonomic/functional groups (e.g. overall mean abundance $\leq$ 0.1, or presence in <15% of plots) alters results substantially.] additionally, to enable plot-level characterisation of tree traits as continuous variables, we calculated the Shannon-Wiener diversity of (1) bark type and (2) pH categories,^[This approach seems a bit convoluted for pH, which is already a continuous variable. Alternatively, we could simply calculate the mean pH per plot, or perhaps the proportion of high/low pH trees (e.g. >6.5 or <4.5).] and the proportion of (3) large trees (i.e. girth $\geq$ 200 cm), (4) trees with buttresses or flutes and (5) dipterocarp trees within each plot.
 
-Lichen taxonomic group^[It makes sense to calculate the three univariate diversity measures (richness, evenness and diversity) for taxonomic groups only, and not functional groups, with 'functional diversity' represented by the four distance-based FD indices.] richness (_S_), Simpson's evenness ($1-\lambda$) and Shannon-Wiener diversity (_H\'_) were calculated for each plot. Additionally, the following distance-based functional diversity indices were calculated from lichen functional group abundance data in conjunction with the functional traits matrix (Table _x_), using the function `dbFD` in the R package `FD`: functional richness (FRic), functional evenness (FEve), functional divergence (FDiv) and functional dispersion (FDis).^[Although all four distance-based FD indices were calculated successfully for each plot based on summed abundances, calculation of FRic and FDiv fails when using tree-level data, apparently owing to instances of <3 singular functional groups per tree. Further, it was not possible to calculate FEve and FDis for all individual trees, for similar reasons relating to data insufficiency.]
+Lichen taxonomic group^[It makes sense to calculate the three univariate diversity measures (richness, evenness and diversity) for taxonomic groups only, and not functional groups, with 'functional diversity' represented by the four distance-based FD indices.] richness (_S_), Simpson's evenness ($1-\lambda$) and Shannon-Wiener diversity (_H\'_) were calculated for each plot. Additionally, the following distance-based functional diversity indices were calculated from lichen functional group abundance data in conjunction with the functional traits matrix (Table _x_), using the function `dbFD` in the R package `FD` (v1.0.12; Laliberté _et al._, 2014): functional richness (FRic), functional evenness (FEve), functional divergence (FDiv) and functional dispersion (FDis).^[Although all four distance-based FD indices were calculated successfully for each plot based on summed abundances, calculation of FRic and FDiv fails when using tree-level data, apparently owing to instances of <3 singular functional groups per tree. Further, it was not possible to calculate FEve and FDis for all individual trees, for similar reasons relating to data insufficiency.]
 
 The community-level weighted means (CWMs) of lichen functional traits were also calculated for each plot, based on the summed abundances of trait classes (i.e. the product of the functional group abundance and functional trait classification matrices; see e.g. Garnier _et al._, 2004, _Ecology_ 85, 2630--2637; Lavorel _et al._, 2008, _Funct. Ecol._ 22:134--147; Koch _et al._, 2013, _Ecol. Indic._ 34:22--30), via the `dbFD::functcomp` function.
 
-Prior to multivariate analyses (PERMANOVA, SIMPER, BIOENV and dbRDA -- see below),^[For some reason, $\log_{10}(x+1)$-transforming lichen abundance data prior to CAP site classification analyses tends to produce warnings resulting from negative Eigenvalues, and reduces overall classification success. Therefore these analyses are currently based on untransformed data.] lichen taxonomic and functional group abundance data were $\log_{10}(x+1)$-transformed to reduce the influence of numerically dominant taxonomic or functional groups.
+Prior to multivariate analyses (PERMANOVA, SIMPER, BIOENV, dbRDA and CAP -- see below),^[For some reason, $\log_{10}(x+1)$-transforming lichen abundance data prior to CAP site classification analyses tends to produce warnings resulting from negative Eigenvalues, and reduces overall classification success. Therefore these analyses are currently based on untransformed data.] lichen taxonomic and functional group abundance data and trait CWMs were $\log_{10}(x+1)$-transformed to reduce the influence of numerically dominant groups and trait classes.
 
 
 ### Differences in lichen diversity, community structure and traits among sites
@@ -72,7 +72,7 @@ To complement these unconstrained multivariate analyses, overall patterns in lic
 
 Relative contributions of individual lichen taxonomic and functional groups and trait classes to differences in community structure between groups of sites identified by PERMANOVA were subsequently determined via similarity of percentages (SIMPER; Clarke, 1993, _Aus. J. Ecol._ 18:117--143).
 
-Univariate PerANOVAs were based on Euclidean distance matrices calculated from untransformed data. For all multivariate tests (both unconstrained and constrained, including dbRDA and CAP -- see below) community dissimilarities were calculated using the zero-adjusted Bray-Curtis coefficient (Clarke _et al._, 2006, _J. Exp. Mar. Biol. Ecol._ 330:55--80).^[The use of a 'zero-adjusted' dissimilarity coefficient is necessary for tree-level abundance data, which include a number of 'blank' samples; but we could probably just use standard Bray-Curtis for plot-level data.]
+Univariate PerANOVAs were based on Euclidean distance matrices calculated from untransformed data. For all multivariate tests (both unconstrained and constrained, including dbRDA and CAP -- see below) community dissimilarities were calculated using the Bray-Curtis coefficient.^[The use of the 'zero-adjusted' Bray-Curtis coefficient (Clarke _et al._, 2006, _J. Exp. Mar. Biol. Ecol._ 330:55--80) is necessary for tree-level abundance data, which include a number of 'blank' samples; but standard Bray-Curtis is probably fine for plot-level data.]
 
 
 ### Associations of lichen taxa, functional groups and trait classes with sites
@@ -82,7 +82,7 @@ The extent to which lichen taxonomic and functional groups, as well as functiona
 
 ### Relationships of lichen communities and traits with tree functional traits
 
-To enable dissimilarities in lichen communities and traits to be visualised in relation to tree functional traits, the five tree traits (= 'environmental' variables) were used in a constrained distance-based redundancy analysis (dbRDA), a variant of canonical analysis of principal coordinates (CAP; Anderson & Willis, 2003, _Ecology_ 84:511--525), using the `capscale` function in the R package `vegan` (version 2.5-6; Oksanen et al., 2019).^[While traditional CAP may be performed as a discriminant analysis (as opposed to a canonical correlation analysis) involving a single grouping variable, dbRDA allows for the inclusion of multiple categorical constraints.]
+To enable dissimilarities in lichen communities and traits to be visualised in relation to tree functional traits, the five tree traits (= 'environmental' variables) were used in a constrained distance-based redundancy analysis (dbRDA), a variant of canonical analysis of principal coordinates (CAP; Anderson & Willis, 2003, _Ecology_ 84:511--525), using the `capscale` function in the R package `vegan` (v2.5-6; Oksanen et al., 2019).^[While traditional CAP may be performed as a discriminant analysis (as opposed to a canonical correlation analysis) involving a single grouping variable, dbRDA allows for the inclusion of multiple categorical constraints.]
 
 This analysis was performed separately for lichen taxonomic and functional groups and trait classes, using summed lichen group abundances, trait CWMs and continuous tree trait variables calculated for each plot as described above.^[If conducting these analyses at 'tree-level', to account for variation among plots in the tree-level analysis, 'plot' may be included as a conditioning variable in the dbRDA model.]
 
@@ -93,7 +93,7 @@ The significance of overall models (based on the sum of all eigenvalues) and of 
 
 ### Classification of sites based on lichen communities and functional traits
 
-Further CAP analyses were used to estimate the accuracy with which plots may be assigned to sites based on lichen community structure and trait composition. This cross-validation method involves the 'leave-one-out' approach of Lachenbruch & Mickey (1968; _Technometrics_ 10:1--11) to determine the proportion of individual observations (in this case, plots) that are successfully allocated to the correct group (Anderson & Willis, 2003). Using the `CAPdiscrim` function in the R package `BiodiversityR`,^[Previously, these analyses were conducted using the CAP FORTRAN programme (Anderson, 2002, _Ecological Archives_ E084-011-S1).] this analysis was performed separately for lichen taxonomic and functional groups and trait CWMs, versus a single factor, 'site' (i.e. a discriminant analysis, rather than a canonical correlation analysis). The appropriate numbers of principal coordinate axes (_m_) involved in the discriminant analyses were selected automatically based on the minimum misclassification error.
+Further CAP analyses were used to estimate the accuracy with which plots may be assigned to sites based on lichen community structure and trait composition. This cross-validation method involves the 'leave-one-out' approach of Lachenbruch & Mickey (1968; _Technometrics_ 10:1--11) to determine the proportion of individual observations (in this case, plots) that are successfully allocated to the correct group (Anderson & Willis, 2003). Using the `CAPdiscrim` function in the R package `BiodiversityR` (v2.11.3; Kindt & Coe, 2005),^[Previously, these analyses were conducted using the CAP FORTRAN programme (Anderson, 2002, _Ecological Archives_ E084-011-S1).] this analysis was performed separately for lichen taxonomic and functional groups and trait CWMs, versus a single factor, 'site' (i.e. a discriminant analysis, rather than a canonical correlation analysis). The appropriate numbers of principal coordinate axes (_m_) involved in the discriminant analyses were selected automatically based on the minimum misclassification error.
 
 
 ## Main results
@@ -106,12 +106,12 @@ Mean 'plot-level' lichen diversity (taxonomic group _S_, $1-\lambda$ and _H\'_; 
 # ~ taxonomic groups:
 mean_div_li_taxa_plot %>%
   mutate_at(-1, ~ formatC(., digits = 2, format = "f")) %>%
-  kable(caption = 'Taxonomic group data')
+  kable(caption = 'Taxonomic group data', longtable = FALSE)
 
 # ~ functional groups:
 mean_div_li_func_plot %>%
   mutate_at(-1, ~ formatC(., digits = 2, format = "f")) %>%
-  kable(caption = 'Functional group data')
+  kable(caption = 'Functional group data', longtable = FALSE)
 ```
 
 ![Boxplot of lichen taxonomic group richness (_S_), evenness ($1-\lambda$) and diversity (_H\'_) versus site (D = Danum Valley Conservation Area, M = Maliau Conservation Area {old growth sites}, S = Stability of Altered Forest Ecosystems (SAFE) Project area {logged site}).](./figs/boxplots_taxa_plot.pdf)
@@ -120,7 +120,7 @@ mean_div_li_func_plot %>%
 
 Lichen taxonomic diversity and evenness were significantly lower at the logged site (S) compared to the two old growth sites (D and M), which in turn did not differ from each other (Figure _x_). For richness, although there was only a marginally significant effect of site (P `r rep_p(as.numeric(li_taxa_plot_s[li_taxa_plot_s$Source=="site", "P(MC)"]))`) and post-hoc pairwise comparisons revealed no significant difference between M and S, the planned comparison between logged and old growth sites suggested that richness was greater at the latter (`r rep_p(as.numeric(li_taxa_plot_s[li_taxa_plot_s$Source=="(D,M) vs. S", "P(MC)"]))`).
 
-PerANOVA tables and post-hoc pairwise test results (taxonomic groups):
+PerANOVA tables and post-hoc pairwise test results (taxonomic group _S_):
 
 ```{r peranova_tables_taxa_plot_s, echo = FALSE}
 options(knitr.kable.NA = '')  # ensure NAs printed as blanks
@@ -131,13 +131,15 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 li_taxa_plot_s %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen taxonomic group _S_ vs. site')
+  kable(caption = 'Lichen taxonomic group _S_ vs. site', longtable = FALSE)
 
 li_taxa_plot_s_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
+
+PerANOVA tables and post-hoc pairwise test results (taxonomic group $1-\lambda$):
 
 ```{r `peranova_tables_taxa_plot_1-l`, echo = FALSE}
 options(knitr.kable.NA = '')  # ensure NAs printed as blanks
@@ -146,13 +148,15 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 `li_taxa_plot_1-l` %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen taxonomic group $1-\\lambda$ vs. site')
+  kable(caption = 'Lichen taxonomic group $1-\\lambda$ vs. site', longtable = FALSE)
 
 `li_taxa_plot_1-l_ph` %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
+
+PerANOVA tables and post-hoc pairwise test results (taxonomic group _H\'_):
 
 ```{r peranova_tables_taxa_plot_h, echo = FALSE}
 options(knitr.kable.NA = '')  # ensure NAs printed as blanks
@@ -161,17 +165,17 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 li_taxa_plot_h %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen taxonomic group _H\'_ vs. site')
+  kable(caption = 'Lichen taxonomic group _H\'_ vs. site', longtable = FALSE)
 
 li_taxa_plot_h_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
 
 None of the four distance-based Functional Diversity indices showed clear differences between logged and old growth sites. Only for FDis was there a significant effect of site, whereby planned comparisons indicated a lower FDis at logged vs. old growth sites (P `r rep_p(as.numeric(li_func_plot_fdis[li_func_plot_fdis$Source=="(D,M) vs. S", "P(MC)"]))`); however, post-hoc pairwise comparisons were inconclusive. Although planned comparisons suggested that FRic was lower in the logged site compared to the old growth sites (P `r rep_p(as.numeric(li_func_plot_fric[li_func_plot_fric$Source=="(D,M) vs. S", "P(MC)"]))`), post-hoc comparisons were again inconclusive.^[One disadvantage of using 'plot-level' data for analyses is a loss of statistical power compared to when individual trees are treated as replicates.]
 
-PerANOVA tables and post-hoc pairwise test results (functional groups):
+PerANOVA tables and post-hoc pairwise test results (functional group FRic):
 
 ```{r peranova_tables_func_plot_fric, echo = FALSE}
 options(knitr.kable.NA = '')  # ensure NAs printed as blanks
@@ -181,13 +185,15 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 li_func_plot_fric %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen functional group FRic vs. site')
+  kable(caption = 'Lichen functional group FRic vs. site', longtable = FALSE)
 
 li_func_plot_fric_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
+
+PerANOVA tables and post-hoc pairwise test results (functional group FEve):
 
 ```{r peranova_tables_func_plot_feve, echo = FALSE}
 options(knitr.kable.NA = '')  # ensure NAs printed as blanks
@@ -196,13 +202,15 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 li_func_plot_feve %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen functional group FEve vs. site')
+  kable(caption = 'Lichen functional group FEve vs. site', longtable = FALSE)
 
 li_func_plot_feve_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
+
+PerANOVA tables and post-hoc pairwise test results (functional group FDiv):
 
 ```{r peranova_tables_func_plot_fdiv, echo = FALSE}
 options(knitr.kable.NA = '')  # ensure NAs printed as blanks
@@ -211,13 +219,15 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 li_func_plot_fdiv %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen functional group FDiv vs. site')
+  kable(caption = 'Lichen functional group FDiv vs. site', longtable = FALSE)
 
 li_func_plot_fdiv_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
+
+PerANOVA tables and post-hoc pairwise test results (functional group FDis):
 
 ```{r peranova_tables_func_plot_fdis, echo = FALSE}
 options(knitr.kable.NA = '')  # ensure NAs printed as blanks
@@ -226,12 +236,12 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 li_func_plot_fdis %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen functional group FDis vs. site')
+  kable(caption = 'Lichen functional group FDis vs. site', longtable = FALSE)
 
 li_func_plot_fdis_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
 
 There were highly significant differences in overall lichen community structure (in terms of both taxonomic and functional groups) and functional trait composition (as trait CWMs) between old growth and logged sites, but not between Danum and Maliau Conservation Areas (Tables _x_). This pattern was evident from MDS plots showing strong separation between the SAFE Project area and the other two sites (Figure _x_).
@@ -246,12 +256,15 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 perm_li_taxa_plot %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen community structure (taxonomic groups) vs. site')
+  kable(
+    caption = 'Lichen community structure (taxonomic groups) vs. site',
+    longtable = FALSE
+  )
 
 perm_li_taxa_plot_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
 
 PERMANOVA tables and post-hoc pairwise test results (functional groups):
@@ -263,12 +276,15 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 perm_li_func_plot %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen community structure (functional groups) vs. site')
+  kable(
+    caption = 'Lichen community structure (functional groups) vs. site',
+    longtable = FALSE
+  )
 
 perm_li_func_plot_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
 
 PERMANOVA tables and post-hoc pairwise test results (trait classes):
@@ -280,17 +296,22 @@ options(knitr.kable.NA = '')  # ensure NAs printed as blanks
 perm_li_traits_plot %>%
   mutate_at(3:5, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(6, 8), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Lichen functional trait composition vs. site')
+  kable(
+    caption = 'Lichen functional trait composition vs. site',
+    longtable = FALSE
+  )
 
 perm_li_traits_plot_ph %>%
   mutate_at(2, ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(c(3, 5), ~ formatC(., digits = 3, format = "f")) %>%
-  kable(caption = 'Post-hoc pairwise tests')
+  kable(caption = 'Post-hoc pairwise tests', longtable = FALSE)
 ```
 
 ![Non-metric multidimensional scaling (MDS) plot of lichen community structure as (a) taxonomic and (b) functional groups, and (c) functional trait composition, using 'plot-level' data summarised for each plot. Based on Bray-Curtis dissimilarities (zero-adjusted for taxonomic and functional group abundances) calculated from $\log_{10}(x+1)$-transformed data. Ellipses represent the standard deviation of points within each group.](./figs/mds_plot.pdf)
 
 Of the lichen taxonomic/functional groups making the greatest contributions to differences in community structure, [_R-Es_, _Gr-th_, _ArH_, _Gr-li_, _R-Py_, _PyP_, _CoL_, _CoC_ and _PiM_] and [_sqhya_, _crthe_, _crbya_, _crbysp_, _crlir_, _crpeb_, _sqhyp_, _focyb_, _focyr_, _crmzp_ and _cata_] exhibited higher mean abundances in old growth sites compared to the logged site, whereas [_ArC_, _RoBi_ and _UiCr_] and [_crstlf_, _crsco_ and _crapo_] showed the opposite trend.
+
+The following lichen functional traits exhibited greater CWM values in old growth sites compared to logged site: vegetative dispersal structures (i.e. soredia/isidia/pseudisidia), squamulose growth type, absence of fimbriate prothallus, non-byssoid surface structure, unknown Chlorophyta photobiont, apothecia with margins, and thelotremoid apothecia. Conversely, the following traits exhibited greater CWM values in the logged site: fimbriate prothallus, ?absence of sexual dispersal structures, byssoid surface structure, ?absence of vegetative dispersal structures, non-carbonised perithecia, crustose growth type, and Trentepohliaceae photobiont.
 
 SIMPER table (taxonomic groups):
 
@@ -302,7 +323,8 @@ simp_li_taxa_plot[[1]] %>%
   mutate_at(c(2:4), ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(5, ~ formatC(., digits = 1, format = "f")) %>%
   kable(
-    caption = 'Lichen taxonomic group contributions to differences in community structure. (D,M), S: overall mean abundance in old growth and logged sites, respectively; Contrib./SD: average taxon contribution to group dissimilarity divided by standard deviation of contributions; Contrib.%: percent contribution of taxon to overall between-group dissimilarity. Only the most important taxa (Contrib. $\\geq$ 3%) are shown.'
+    caption = 'Lichen taxonomic group contributions to differences in community structure. (D,M), S: overall mean abundance in old growth and logged sites, respectively; Contrib./SD: average taxon contribution to group dissimilarity divided by standard deviation of contributions; Contrib.%: percent contribution of taxon to overall between-group dissimilarity. Only the most important taxa (Contrib. $\\geq$ 3%) are shown.',
+    longtable = FALSE
   )
 ```
 
@@ -315,11 +337,10 @@ simp_li_func_plot[[1]] %>%
   mutate_at(c(2:4), ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(5, ~ formatC(., digits = 1, format = "f")) %>%
   kable(
-    caption = 'Lichen functional group contributions to differences in community structure'
+    caption = 'Lichen functional group contributions to differences in community structure',
+    longtable = FALSE
   )
 ```
-
-The following lichen functional traits exhibited greater CWM values in old growth sites compared to logged site: vegetative dispersal structures (i.e. soredia/isidia/pseudisidia), squamulose growth type, absence of fimbriate prothallus, non-byssoid surface structure, unknown Chlorophyta photobiont, apothecia with margins, and thelotremoid apothecia. Conversely, the following traits exhibited greater CWM values in the logged site: fimbriate prothallus, ?absence of sexual dispersal structures, byssoid surface structure, ?absence of vegetative dispersal structures, non-carbonised perithecia, crustose growth type, and Trentepohliaceae photobiont.
 
 SIMPER table (trait classes):
 
@@ -330,7 +351,8 @@ simp_li_traits_plot[[1]] %>%
   mutate_at(c(2:4), ~ formatC(., digits = 2, format = "f")) %>%
   mutate_at(5, ~ formatC(., digits = 1, format = "f")) %>%
   kable(
-    caption = 'Lichen trait class contributions to differences in community structure. (D,M), S: overall mean CWM (community-level weighted mean value) in old growth and logged sites, respectively; Contrib./SD: average trait class contribution to group dissimilarity divided by standard deviation of contributions; Contrib.%: percent contribution of trait class to overall between-group dissimilarity. Only the most important trait classes (Contrib. $\\geq$ 3%) are shown.'
+    caption = 'Lichen trait class contributions to differences in community structure. (D,M), S: overall mean CWM (community-level weighted mean value) in old growth and logged sites, respectively; Contrib./SD: average trait class contribution to group dissimilarity divided by standard deviation of contributions; Contrib.%: percent contribution of trait class to overall between-group dissimilarity. Only the most important trait classes (Contrib. $\\geq$ 3%) are shown.',
+    longtable = FALSE
   )
 ```
 
@@ -362,7 +384,7 @@ The diversity of bark types and proportion of dipterocarps within plots were ide
 
 In all three cases, CAP (dbRDA) axis 1 correlated negatively with both plot-level tree traits, while axis 2 appeared to be related positively to bark diversity and negatively to dipterocarp proportion; the overall analysis was significant, as determined by permutation tests (taxonomic groups: P `r rep_p(cap_taxa_plot_p)`; functional groups: P `r rep_p(cap_func_plot_p)`; trait classes: P `r rep_p(cap_traits_plot_p)`).
 
-however, while neither 'trait' was significant as a constraining variable for either lichen taxonomic groups or trait classes, only the proportion of dipterocarps was significantly related to lichen community structure in terms of functional groups (pseudo-_F_~1,19~ = `r rep_2dp(cap_func_plot_margin_f["dipterocarp_prop"])`, P `r rep_p(cap_func_plot_margin_p["dipterocarp_prop"])`).
+However, while neither 'trait' was significant as a constraining variable for either lichen taxonomic groups or trait classes, only the proportion of dipterocarps was significantly related to lichen community structure in terms of functional groups (pseudo-_F_~1,19~ = `r rep_2dp(cap_func_plot_margin_f["dipterocarp_prop"])`, P `r rep_p(cap_func_plot_margin_p["dipterocarp_prop"])`).
 
 Taxonomic groups [_ArA_, _ArT_, _CnS_, _CoC_, _Gr-th_, _PyP_, _R-Py_, _ThM_, _TryP_ and _VeFl_] and functional groups [_crbya_, _crbys_, _crlir_, _crmzs_, _crpeb_, _crspe_, _crthe_, _focyr_ and _sqhya_] appeared to be associated strongly with plot-level bark diversity. Taxa [_Gr-Li_, and _R-Es_] were also associated with bark diversity, but showed a stronger association with the proportion of dipterocarps. Conversely, groups [_ArC_ and _Uicr_] and [_crstlf_] were negatively associated with both bark diversity and proportion of dipterocarps.
 
@@ -383,14 +405,23 @@ rbind(
   'Functional groups' = cap_func_plot_site$percent.level,
   'Trait classes' = cap_traits_plot_site$percent.level
 ) %>%
+  cbind(
+    'Overall' = c(
+      cap_taxa_plot_site$percent,
+      cap_func_plot_site$percent,
+      cap_traits_plot_site$percent
+    )
+  ) %>%
   as.data.frame %>%
-  rownames_to_column('data') %>%
-  mutate_at(c(2:4), ~ formatC(., digits = 1, format = "f")) %>%
+  rownames_to_column(' ') %>%
+  mutate_at(c(2:5), ~ formatC(., digits = 1, format = "f")) %>%
   kable(caption = 'Percent classification success of plots to sites based on lichen taxonomic and functional group abundances and trait CWMs.')
 ```
 
 
 
+
+\newpage
 
 ## Queries
 
