re-categorise pH based on quantiles, not arbitrary cut-offs *stop replacing missing pH with mean per bark type *update methods in master .Rmd *convert empty abundance columns from logical to numeric

--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -34,9 +34,7 @@ Lichens were categorised according to both (1) taxonomic and (2) functional grou
 
 The following functional traits were recorded for each tree: (1) girth, measured by $\dots$; (2) bark type (DR = dry ancient, S = smooth, C = scaly, R = ridged/rough); (3) the presence of buttresses or flutes; and (4) dipterocarp vs. non-dipterocarp species. Additionally, for the majority of trees, (5) bark pH was determined from the mean of up to three readings, measured by $\dots$.
 
-Tree girth and mean pH were converted into categorical variables (girth: s < 100 cm; m = 100--199 cm; l $\geq$ 200 cm; pH: vl < 2; l = 2 $\leq x <$ 4; m = 4 $\leq x <$ 6; h $\geq$ 6).^[These cut-off values for pH categories are quite arbitrary, and may need adjusting. Perhaps they could be based on the overall distribution of mean pH values, e.g. quartiles.]
-
-For trees missing pH data, mean pH was estimated as the overall mean pH for the corresponding bark type category, justified by the expected relationship between bark type and pH,^[There doesn't appear to be a strong relationship between bark type and pH in this case. Also, modelling one tree trait based on another tree trait seems a bit circular, and may introduce unwanted covariance among 'environmental' variables in constrained multivariate analyses.], and then categorised accordingly.
+Tree girth and mean pH were converted into categorical variables (girth: s < 100 cm; m = 100--199 cm; l $\geq$ 200 cm; pH: vl, l, m and h, based on quartiles calculated from the overall distribution of per-tree pH values.^[Quartile values were calculated using the default continuous sample quantile 'Type 7' via the `quantile` function in `R`. Also, missing pH values are no longer replaced with the mean pH for the corresponding bark type.]
 
 ```{r nobs_tables, eval = FALSE, echo = FALSE}
 # check actual numbers of replicates per site
@@ -53,7 +51,7 @@ list(
 
 ## Data analyses
 
-Data analyses were conducted at 'plot-level', whereby plots, rather than individual trees, were treated as replicates.^[Increasingly, I felt that 'tree-level' analyses should be excluded altogether, with analyses focussing solely on 'plot-level' calculations, given that, for tree-level data, (1) some distance-based FD indices cannot be calculated and (2) MDS fails to converge (see below); also, (3) there was some concern over the non-independence of data when considering individual trees within the same plot as replicates, and (4) in practical terms, environmental assessments would be conducted at the scale of plots rather than individual trees. But perhaps tree-level results could still be included as Supplementary Material.] Thus, lichen taxonomic and functional group abundance data were summed for each plot;^[It might be worth checking whether exclusion of rare taxonomic/functional groups (e.g. overall mean abundance $\leq$ 0.1, or presence in <15% of plots) alters results substantially.] additionally, to enable plot-level characterisation of tree traits as continuous variables, we calculated the Shannon-Wiener diversity of (1) bark type and (2) pH categories,^[This approach seems a bit convoluted for pH, which is already a continuous variable. Alternatively, we could simply calculate the mean pH per plot, or perhaps the proportion of high/low pH trees (e.g. >6.5 or <4.5).] and the proportion of (3) large trees (i.e. girth $\geq$ 200 cm), (4) trees with buttresses or flutes and (5) dipterocarp trees within each plot.
+Data analyses were conducted at 'plot-level', whereby plots, rather than individual trees, were treated as replicates.^[Increasingly, I felt that 'tree-level' analyses should be excluded altogether, with analyses focussing solely on 'plot-level' calculations, given that, for tree-level data, (1) some distance-based FD indices cannot be calculated and (2) MDS fails to converge (see below); also, (3) there was some concern over the non-independence of data when considering individual trees within the same plot as replicates, and (4) in practical terms, environmental assessments would be conducted at the scale of plots rather than individual trees. But perhaps tree-level results could still be included as Supplementary Material.] Thus, lichen taxonomic and functional group abundance data were summed for each plot; additionally, to enable plot-level characterisation of tree traits as continuous variables, we calculated the Shannon-Wiener diversity of (1) bark type and (2) pH categories, and the proportion of (3) large trees (i.e. girth $\geq$ 200 cm), (4) trees with buttresses or flutes and (5) dipterocarp trees within each plot.
 
 Lichen taxonomic group^[It makes sense to calculate the three univariate diversity measures (richness, evenness and diversity) for taxonomic groups only, and not functional groups, with 'functional diversity' represented by the four distance-based FD indices.] richness (_S_), Simpson's evenness ($1-\lambda$) and Shannon-Wiener diversity (_H\'_) were calculated for each plot. Additionally, the following distance-based functional diversity indices were calculated from lichen functional group abundance data in conjunction with the functional traits matrix (Table _x_), using the function `dbFD` in the R package `FD` (v1.0.12; Laliberté _et al._, 2014): functional richness (FRic), functional evenness (FEve), functional divergence (FDiv) and functional dispersion (FDis).^[Although all four distance-based FD indices were calculated successfully for each plot based on summed abundances, calculation of FRic and FDiv fails when using tree-level data, apparently owing to instances of <3 singular functional groups per tree. Further, it was not possible to calculate FEve and FDis for all individual trees, for similar reasons relating to data insufficiency.]
 
